# animodel

./: .gitignore  ANALYZA.md  CHANGELOG_review.md  HODNOCENI_PROJEKTU.md  README.md  animodel_test_harness.py  config.example.yaml  config.yaml  franchise_tags.py  pyproject.toml  requirements.txt
animodel/: __init__.py  attributes.py  cli.py  config.py  enrich.py  intensity.py  mal.py  recommend.py  report.py  season.py  series.py  taste.py  usercf.py
animodel/sources/: __init__.py  anilist.py  cache.py  http.py  jikan.py  shikimori.py
tests/: conftest.py  test_anilist.py  test_cache.py  test_composite.py  test_config_defaults.py  test_fallback.py  test_franchise_weights.py  test_http_retry.py  test_intensity.py  test_jikan.py  test_progress.py  test_season.py  test_shikimori.py  test_spoiler.py  test_synergy.py  test_taste_calibration.py  test_usercf.py
