[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "animodel"
version = "1.0.0"
description = "Model anime vkusu z MAL exportu + doporučení"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scikit-learn>=1.3", "requests>=2.28", "PyYAML>=6.0"]

[project.scripts]
animodel = "animodel.cli:main"

[tool.setuptools]
packages = ["animodel", "animodel.sources"]
